--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=1
-DB_NAME=AuraPrints
-JWT_SECRET=your-super-secret-jwt-key
+SMTP_HOST=smtp.mail.ru
+SMTP_PORT=587
+SMTP_USER=auraprint@mail.ru
+SMTP_PASS=D0ULJ0AcWhw1TXpX40LW
