--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "@vueuse/sound": "^2.1.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
