--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Ебучий базовый образ
-FROM node:24
+FROM node:24 AS builder
 
 # Рабочая папка, куда все это говно пойдет
 WORKDIR /app
@@ -7,19 +7,19 @@ WORKDIR /app
 # Копируем package.json, ебнем зависимости
 COPY package*.json ./
 RUN npm install
-
+EXPOSE 5173
 # Копируем весь код, ебашим сборку
 COPY . .
-RUN npm run build
+CMD npm run dev
 
-# Переходим на nginx для раздачи статики
-FROM nginx:stable-alpine
+# # Переходим на nginx для раздачи статики
+# FROM nginx:stable-alpine
 
-# Копируем собранное говно в nginx
-COPY --from=0 /app/dist /usr/share/nginx/html
+# # Копируем собранное говно в nginx
+# COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Открываем порт 80
-EXPOSE 80
+# # Открываем порт 80
+# EXPOSE 80
 
-# Запускаем эту блядскую шарманку
-CMD ["nginx", "-g", "daemon off;"]
+# # Запускаем эту блядскую шарманку
+# CMD ["nginx", "-g", "daemon off;"]
