--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
             - back_net
         environment:
             NODE_ENV: production
+            SITE_HOST: xn----7sba7azakeduc.xn--p1ai
 networks:
     back_net:
         driver: bridge
