--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@vueuse/sound": "^2.1.3",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vuex": "^4.0.2"
